precompiles/utils/macro/tests/precompile/compile-fail/handle/missing.stderr
error: Precompile methods must have at least 1 parameter (the PrecompileHandle)
  --> tests/precompile/compile-fail/handle/missing.rs:23:2
   |
23 |     fn foo() {
   |     ^^^^^^^^
